Make sure action buttons don’t wrap

--- a/app/assets/stylesheets/urls.scss
+++ b/app/assets/stylesheets/urls.scss
@@ -444,3 +444,6 @@ $superInputHeight: 50px;
 	}
 
 }
+.actions-column{
+	white-space: nowrap;
+}
